[gd_scene load_steps=2 format=3 uid="uid://ccpnh6x4ilpq2"]

[ext_resource type="Script" path="res://Interfaz/Interfaz_Codigo/multi_control.gd" id="1_7labk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7labk")

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 207.0
offset_right = 460.0
offset_bottom = 246.0
text = "Join
"

[node name="Host" type="Button" parent="Join"]
layout_mode = 0
offset_left = -231.0
offset_top = 5.0
offset_right = -70.0
offset_bottom = 40.0
text = "Host
"

[node name="Empezar" type="Button" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 291.0
offset_right = 361.0
offset_bottom = 330.0
text = "Empezar
"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 141.0
offset_right = 529.0
offset_bottom = 172.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 96.0
offset_right = 90.0
offset_bottom = 119.0
text = "Nombre"

[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Join/Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Empezar" to="." method="_on_empezar_button_down"]
